feat: add micro event queue worker
